--- a/vvt.cabal
+++ b/vvt.cabal
@@ -50,14 +50,14 @@ Library
     Simplify
   GHC-Options: -fwarn-unused-imports
   Build-Depends:
-    base,mtl,linear,containers,vector,transformers,attoparsec,bytestring,atto-lisp,text,dependent-sum,smtlib2,smtlib2-pipe,smtlib2-debug,smtlib2-timing,smtlib2-emulated-modulus,bindings-llvm,fgl,dependent-map,resource-pool,pqueue,time
+    base,mtl,linear,containers,vector,transformers,attoparsec,bytestring,atto-lisp,text,dependent-sum,smtlib2 >= 1.0 && < 1.1,smtlib2-pipe >= 1.0 && < 1.1,smtlib2-debug >= 1.0 && < 1.1,smtlib2-timing >= 1.0 && < 1.1,smtlib2-emulated-modulus >= 1.0 && < 1.1,bindings-llvm,fgl,dependent-map,resource-pool,pqueue,time
   Extensions:
     RankNTypes,KindSignatures,DataKinds,TypeOperators,TypeFamilies,GADTs,ScopedTypeVariables,FlexibleContexts,MultiParamTypeClasses,TypeSynonymInstances,FlexibleInstances,StandaloneDeriving,PolyKinds,ViewPatterns,OverloadedStrings,GeneralizedNewtypeDeriving,DeriveFunctor,DeriveFoldable,DeriveTraversable,CPP
   if flag(Native-Z3)
-    Build-Depends:      smtlib2-z3
+    Build-Depends:      smtlib2-z3 >= 1.0 && < 1.1
     CPP-Options:        -DNATIVE_Z3
   if flag(Native-MathSAT)
-    Build-Depends:      smtlib2-mathsat
+    Build-Depends:      smtlib2-mathsat >= 1.0 && < 1.1
     CPP-Options:        -DNATIVE_MATHSAT
 
 Executable vvt-enc
