modify benchmarks to new smtlib
(cherry picked from commit b75edebaf13d7ab897acf0266ae3a1365cb67d7d)

--- a/vvt.cabal
+++ b/vvt.cabal
@@ -105,3 +105,8 @@ executable vvt-svcomp
   Main-Is:              SVComp.hs
   Build-Depends:        base,containers,bindings-llvm
   Extensions:           ViewPatterns,ScopedTypeVariables
+
+executable bench
+  Main-Is:              bench/Main.hs
+  Build-Depends:        base, text, bytestring, turtle, yaml
+  GHC-Options:          -Wall
