--- a/stack.yaml
+++ b/stack.yaml
@@ -1,31 +1,28 @@
+resolver: lts-3.19
+compiler: ghc-7.10.3
+
 packages:
 - '.'
-#- /home/simon/devel/rmp/bindings-llvm
+#smtlib2 1.0
+- location:
+    git: https://github.com/hguenther/smtlib2.git
+    commit: b6fd04bc3987197eaf4d0a912d90ea88d3ae6916
+  subdirs:
+    - '.'
+    - backends/debug
+    - backends/pipe
+    - backends/timing
+    - extras/emulated-modulus
+  extra-dep: true
 #bindings-llvm
 - location:
     git: https://github.com/simonjantsch/bindings-llvm.git
     commit: bb17f7c31bef683feda4c777378cd25602cc5815
   extra-dep: true
 
-#smtlib2
-- location:
-    git: https://github.com/hguenther/smtlib2.git
-    commit: de1393075a48a92c0fbe063b7eb98654697412c8
-  subdirs:
-  - backends/debug
-  - backends/timing
-  - extras/emulated-modulus
-  extra-dep: true 
-
-resolver: lts-2.22
-
 extra-deps:
+- atto-lisp-0.2.2.2
 - data-fix-0.0.1
 - pqueue-1.3.1
-- smtlib2-0.3
-
-#extra-include-dirs:
-#- /home/simon/devel/llvm/clang+llvm-3.5.0-x86_64-linux-gnu/include
-
-#extra-lib-dirs:
-#- /home/simon/devel/llvm/clang+llvm-3.5.0-x86_64-linux-gnu/lib
+- dependent-map-0.2.1.0
+- dependent-sum-0.3.2.1
