--- a/vvt.cabal
+++ b/vvt.cabal
@@ -48,9 +48,10 @@ Library
     Consecution
     LitOrder
     Simplify
+    Stats
   GHC-Options: -fwarn-unused-imports
   Build-Depends:
-    base,mtl,linear,containers,vector,transformers,attoparsec,bytestring,atto-lisp,text,dependent-sum,smtlib2 >= 1.0 && < 1.1,smtlib2-pipe >= 1.0 && < 1.1,smtlib2-debug >= 1.0 && < 1.1,smtlib2-timing >= 1.0 && < 1.1,smtlib2-emulated-modulus >= 1.0 && < 1.1,bindings-llvm,fgl,dependent-map,resource-pool,pqueue,time
+    base,mtl,linear,containers,vector,transformers,attoparsec,bytestring,atto-lisp,text,dependent-sum,smtlib2 >= 1.0 && < 1.1,smtlib2-pipe >= 1.0 && < 1.1,smtlib2-debug >= 1.0 && < 1.1,smtlib2-timing >= 1.0 && < 1.1,smtlib2-emulated-modulus >= 1.0 && < 1.1,bindings-llvm,fgl,dependent-map,resource-pool,pqueue,time,yaml,aeson,aeson-pretty,cassava,utf8-string
   Extensions:
     RankNTypes,KindSignatures,DataKinds,TypeOperators,TypeFamilies,GADTs,ScopedTypeVariables,FlexibleContexts,MultiParamTypeClasses,TypeSynonymInstances,FlexibleInstances,StandaloneDeriving,PolyKinds,ViewPatterns,OverloadedStrings,GeneralizedNewtypeDeriving,DeriveFunctor,DeriveFoldable,DeriveTraversable,CPP
   if flag(Native-Z3)
@@ -86,7 +87,7 @@ Executable vvt-verify
 Executable vvt-predicates
   Hs-Source-Dirs:       bin
   Main-Is:              Predicates.hs
-  Build-Depends:        vvt,base,smtlib2,smtlib2-pipe,smtlib2-debug,containers
+  Build-Depends:        vvt,base,smtlib2,smtlib2-pipe,smtlib2-debug,containers,dependent-map,dependent-sum
 
 Executable vvt-opt
   Hs-Source-Dirs:       bin
@@ -108,5 +109,5 @@ executable vvt-svcomp
 
 executable bench
   Main-Is:              bench/Main.hs
-  Build-Depends:        base, text, bytestring, turtle, yaml
+  Build-Depends:        base, text, bytestring, turtle, yaml, system-filepath, time
   GHC-Options:          -Wall
