--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-3.19
+resolver: lts-6.35
 compiler: ghc-7.10.3
 with-gcc: /usr/bin/gcc-4.9
 
@@ -7,7 +7,7 @@ packages:
 #smtlib2 1.0
 - location:
     git: https://github.com/hguenther/smtlib2.git
-    commit: 59c8c03cc6086dcf09532d91ef3383fce22cc825
+    commit: c35747f2a5a9ec88dc7b1db41a5aab6e98c0458d
   subdirs:
     - '.'
     - backends/debug
@@ -17,11 +17,11 @@ packages:
 #bindings-llvm
 - location:
     git: https://github.com/hguenther/bindings-llvm
-    commit: c486e76e6c28ae5f4c9718611767789be9eec158
+    commit: 0b8859720330d3d02cafc915bbd4d79473eafa49
   extra-dep: true
 extra-deps:
 - atto-lisp-0.2.2.2
-- data-fix-0.0.1
-- pqueue-1.3.1
-- dependent-map-0.2.1.0
-- dependent-sum-0.3.2.1
+- pqueue-1.3.2.3
+- turtle-1.5.2
+- optparse-applicative-0.14.0.0
+- Cabal-1.24.2.0
